updated main page UI part 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8000"
     volumes:
       - ./web:/web
-      - static_files:/static_files
+      - static:/static
       - media:/media
     env_file: .env
     environment:
@@ -21,11 +21,11 @@ services:
     ports:
       - "80:80"
     volumes:
-      - static_files:/static_files
+      - static:/static
       - media:/media
     links:
       - web:web
 
 volumes:
-  static_files:
+  static:
   media:
