--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,6 @@ services:
     expose:
       - "8000"
     volumes:
-      - code:/web
       - static:/static
       - media:/media
     env_file: .env
@@ -24,7 +23,7 @@ services:
       - db
     environment:
       DEBUG: 'true'
-    command: bash -c "/usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000 &&  python manage.py collectstatic --noinput --clear && python manage.py makemigrations && python manage.py migrate"
+    command: bash -c "python manage.py collectstatic --noinput && python manage.py makemigrations --noinput && python manage.py migrate --noinput && /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000"
   nginx:
     restart: always
     build: ./nginx/
@@ -41,4 +40,3 @@ volumes:
   static:
   media:
   pgdata:
-  code:
