--- a/production.yml
+++ b/production.yml
@@ -1,26 +1,47 @@
-version: '3'
+version: '3.3'
 
 services:
+  db:
+    image: postgres
+    restart: always
+    container_name: db
+    env_file:
+      - db.env
+    volumes:
+      - pgdata:/var/lib/postgresql/data
   web:
     restart: always
     build: ./web
+    image: web
+    container_name: web
     expose:
       - "8000"
     volumes:
-      - web-static:/usr/src/app/static
+      - static:/static
+      - media:/media
     env_file: .env
-    command: /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000
-
+    stdin_open: true
+    tty: true
+    depends_on: 
+      - db
+    env_file:
+      - web.env
+    command: bash -c "python manage.py collectstatic --noinput && python manage.py makemigrations --noinput && python manage.py migrate --noinput && /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000"
   nginx:
     restart: always
     build: ./nginx/
+    image: nginx
+    container_name: nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - web-static:/www/static
+      - static:/static
+      - media:/media
     links:
       - web:web
 
 volumes:
-  web-static:
+  static:
+  media:
   pgdata:
