--- a/production.yml
+++ b/production.yml
@@ -27,9 +27,8 @@ services:
       - web.env.dev
     command: bash -c "python manage.py collectstatic --noinput && python manage.py makemigrations --noinput && python manage.py migrate --noinput && /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000"
   nginx:
+    image: linuxserver/letsencrypt
     restart: always
-    build: ./nginx-prod/
-    image: nginx
     container_name: nginx
     ports:
       - "80:80"
@@ -37,6 +36,9 @@ services:
     volumes:
       - static-prod:/static
       - media-prod:/media
+      - ./docker-prod/config:/config
+      - ./docker-prod/config/nginx.conf:/config/nginx/site-confs/default
+      - ./docker-prod/config/ssl.conf:/config/nginx/ssl.conf
     links:
       - web:web
     environment: 
