--- a/nginx-prod/Dockerfile
+++ b/nginx-prod/Dockerfile
@@ -1,7 +1,7 @@
 FROM linuxserver/letsencrypt
 
-RUN rm /config/nginx/site-confs/default
-RUN rm -r /config/.
+RUN rm -r /config/nginx/site-confs/
+RUN rm -r /config/
 
 COPY config/ /config
 COPY config/nginx.conf /config/nginx/site-confs/default
