--- a/production.yml
+++ b/production.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     container_name: db
     env_file:
-      - db.env.dev
+      - db.env
     volumes:
       - ./prod_storage/pgdb:/var/lib/postgresql/data
   web:
@@ -25,7 +25,7 @@ services:
     depends_on: 
       - db
     env_file:
-      - web.env.dev
+      - web.env
     command: bash -c "python manage.py collectstatic --noinput && python manage.py makemigrations --noinput && python manage.py migrate --noinput && /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000"
   nginx:
     image: linuxserver/letsencrypt
