--- a/production.yml
+++ b/production.yml
@@ -26,7 +26,7 @@ services:
       - db
     env_file:
       - web.env
-    command: bash -c "python manage.py collectstatic --noinput && /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000"
+      command: bash -c "python manage.py collectstatic --noinput && python manage.py makemigrations --noinput && python manage.py migrate --noinput && python web/manage.py makemigrations && /usr/local/bin/gunicorn ace.wsgi:application -w 2 -b :8000"
   nginx:
     image: linuxserver/letsencrypt
     ports:
